feat(vote): add endpoint to vote in poll
